# Naijacal

./: .gitignore  DEPLOY.md  LICENSE  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README_backend.md  architecture.txt  my_architecture.py  pyproject.toml  requirements.txt  test_gemini.py  verify_final_format.py
backend/api/: models.py  urls.py  views.txt
backend/api/domain/: calorie_calculator.py
backend/api/management/commands/: extract_food_data.py  populate_foods.py  update_food_database.py
backend/api/migrations/: 0001_initial.py  0002_alter_food_id.py  0003_remove_food_unit_food_default_unit_and_more.py  0004_alter_food_calories_per_100g_and_more.py
backend/api/repositories/: food_repository.py
backend/api/services/: analyze_food_log.py  food_interpreter.py  gemini_service.py  rate_limit_service.py
backend/api/views/: auth_views.py  meal_views.py
backend/core/: settings.py  urls.py
backend/tests/: conftest.py  test_integration.py  test_security.py  test_unit.py
frontend/: index.html
frontend/frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
frontend/frontend/src/: App.css  App.js
